Revamp About section and add Replicability Stamp
Updated the About section in index.html with improved structure, new content, and horizontal linktree clusters for contacts, work, and social links. Added the Graphics Replicability Stamp Initiative to the open source contributions list and included its logo. Fixed a typo in the 'contributions' section class name and heading.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico Meloni | PhD Student</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="linktree.css">
+    <style>
+      /* Horizontal layout for linktree clusters inside About section */
+      .about-links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin-top: 12px;
+      }
+      .about-links .linktree-cluster {
+        width: auto;          /* override linktree.css */
+        flex: 1 1 200px;
+        text-align: left;
+        margin-bottom: 0;
+      }
+      .about-links .linktree-cluster-title {
+        text-align: left;
+      }
+      @media (max-width: 700px) {
+        .about-links {
+          flex-direction: column;
+          gap: 14px;
+        }
+        .about-links .linktree-cluster {
+          flex: 1 1 auto;
+        }
+      }
+    </style>
 </head>
 <body>
     <header>
@@ -28,7 +58,57 @@
     <main class="container">
         <section class="about">
             <h2>About Me</h2>
-            <p>I am a PhD student in Computer Graphics at the University of Cagliari. My research primarily focuses on volume mapping, where I investigate novel algorithms and innovative applications. I also work on Human-Computer Interaction and Extended Reality (XR), exploring how emerging technologies can enhance user experiences and interaction paradigms.</p>
+            <p>I am a <strong>PhD Student</strong> in <strong>Computer Science</strong> at the <strong>University of Cagliari</strong>, I am part of the research group <strong><a href="https://cg3hci.dmi.unica.it/">CG3HCI</a></strong>.</p>
+            <p>During my studies I developed an interest in <strong>Computer Graphics</strong> (main focus of my PhD and both my thesis) and <strong>Human-Computer Interaction</strong>. My research is now focusing on <strong>Volume Mapping</strong> algorithms and techniques.</p>
+            <p>In my time at the university I also had the opportunity to explore other fields such as <strong>Computer Vision</strong> and <strong>Deep Learning</strong>, although they are not my main focus.</p>
+            <!-- Updated: replace previous shields with the same groups from linktree.html -->
+            <div class="about-links">
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Contacts</div>
+                <div class="linktree-cluster-line"></div>
+                <strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a>
+              </div>
+            </div>
+            </div>
+            <div class="about-links">
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Work</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
+                  <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
+                </a>
+                <a href="https://github.com/federicheddu">
+                  <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
+                </a>
+                <a href="https://www.linkedin.com/in/federicheddu">
+                  <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
+                </a>
+              </div>
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Social</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://twitter.com/federicheddu">
+                  <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
+                </a>
+                <a href="https://www.instagram.com/federicheddu">
+                  <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
+                </a>
+                <a href="https://www.reddit.com/user/federicheddu">
+                  <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
+                </a>
+              </div>
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Other</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://open.spotify.com/user/federicheddu98">
+                  <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
+                </a>
+                <a href="https://steamcommunity.com/id/federicheddu">
+                  <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
+                </a>
+              </div>
+            </div>
+            <!-- /Updated -->
         </section>
         <section class="publications">
             <h2>Publications</h2>
@@ -72,8 +152,8 @@
             </ul>
         </section>
 
-        <section class="contrubutions">
-            <h2>Contributions on Open Source Software</h2>
+        <section class="contributions">
+            <h2>Contributions on Open Source Community</h2>
             <p>Here are some of the open source projects I have contributed to:</p>
             <br>
             <ul>
@@ -110,7 +190,25 @@
                     </div>
                   </div>
                 </li>
-                      
+                <li>
+                  <strong class="publication-title-mobile">Graphics Replicability Stamp Initiative</strong>
+                  <div class="publication-row">
+                    <img class="publication-thumb" src="media/rep_logo.png" alt="Graphics Replicability Stamp Initiative">
+                    <div class="publication-main">
+                      <strong class="publication-title">Graphics Replicability Stamp Initiative</strong>
+                      <div class="publication-cite">
+                        <div class="publication-cite-line"></div>
+                        <div class="publication-cite-content">
+                          <div class="university">
+                            <i>An additional recognition for authors who are willing to go one step further, and in addition to publishing the paper, provide a complete open-source implementation.</i>
+                          </div>
+                          <div class="university">[<a href="https://www.replicabilitystamp.org">Website</a>]</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+            </ul>
         </section>
 
         <section class="resume">
