Refactor about section and update contact info layout
Moved and condensed contact and profile information into a more concise format at the top of the about section. Adjusted CSS for better alignment and centering of linktree clusters. Relocated and restored the grouped social/work/other links below the publications section for improved organization and readability.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         align-items: flex-start;
         justify-content: flex-start;
         margin-top: 12px;
+        margin-bottom: 12px;
       }
       .about-links .linktree-cluster {
         width: auto;          /* override linktree.css */
         flex: 1 1 200px;
-        text-align: left;
+        text-align: center;
         margin-bottom: 0;
       }
       .about-links .linktree-cluster-title {
-        text-align: left;
+        text-align: center;
       }
       @media (max-width: 700px) {
         .about-links {
@@ -42,9 +43,6 @@
             <img src="media/profile_pic.jpg" alt="Profile Picture" class="profile-pic">
             <div>
                 <h1>Federico Meloni</h1>
-                <!--
-                <div class="nickname-subtitle"><em>federicheddu</em></div>
-                -->
                 <h3>PhD Student in Computer Science</h3>
                 <nav>
                     <a href="index.html" class="active">Home</a>
@@ -61,54 +59,8 @@
             <p>I am a <strong>PhD Student</strong> in <strong>Computer Science</strong> at the <strong>University of Cagliari</strong>, I am part of the research group <strong><a href="https://cg3hci.dmi.unica.it/">CG3HCI</a></strong>.</p>
             <p>During my studies I developed an interest in <strong>Computer Graphics</strong> (main focus of my PhD and both my thesis) and <strong>Human-Computer Interaction</strong>. My research is now focusing on <strong>Volume Mapping</strong> algorithms and techniques.</p>
             <p>In my time at the university I also had the opportunity to explore other fields such as <strong>Computer Vision</strong> and <strong>Deep Learning</strong>, although they are not my main focus.</p>
-            <!-- Updated: replace previous shields with the same groups from linktree.html -->
-            <div class="about-links">
-              <div class="linktree-cluster">
-                <div class="linktree-cluster-title">Contacts</div>
-                <div class="linktree-cluster-line"></div>
-                <strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a>
-              </div>
-            </div>
-            </div>
-            <div class="about-links">
-              <div class="linktree-cluster">
-                <div class="linktree-cluster-title">Work</div>
-                <div class="linktree-cluster-line"></div>
-                <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
-                  <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
-                </a>
-                <a href="https://github.com/federicheddu">
-                  <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
-                </a>
-                <a href="https://www.linkedin.com/in/federicheddu">
-                  <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
-                </a>
-              </div>
-              <div class="linktree-cluster">
-                <div class="linktree-cluster-title">Social</div>
-                <div class="linktree-cluster-line"></div>
-                <a href="https://twitter.com/federicheddu">
-                  <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
-                </a>
-                <a href="https://www.instagram.com/federicheddu">
-                  <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
-                </a>
-                <a href="https://www.reddit.com/user/federicheddu">
-                  <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
-                </a>
-              </div>
-              <div class="linktree-cluster">
-                <div class="linktree-cluster-title">Other</div>
-                <div class="linktree-cluster-line"></div>
-                <a href="https://open.spotify.com/user/federicheddu98">
-                  <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
-                </a>
-                <a href="https://steamcommunity.com/id/federicheddu">
-                  <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
-                </a>
-              </div>
-            </div>
-            <!-- /Updated -->
+            <p style="margin-top: 0.5em;"><strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a> - <strong>Address:</strong> Palazzo delle Scienze, via Ospedale 72, Cagliari, Italy</p>
+            <p style="margin-top: 0.1em;"><strong>Profile:</strong> <a href="https://cg3hci.dmi.unica.it/lab/author/federico-meloni/">CG3HCI Lab.</a> ~ <a href="https://web.unica.it/unica/en/ateneo_s08_ss03_sss03_01.page?contentId=SHP501909">University of Cagliari</a> ~ <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf">CV.pdf</a></p>
         </section>
         <section class="publications">
             <h2>Publications</h2>
@@ -332,7 +284,44 @@
             </ul>
         </section>
 
-        <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf" class="btn">Download CV</a>
+        <div class="about-links">
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Work</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
+                  <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
+                </a>
+                <a href="https://github.com/federicheddu">
+                  <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
+                </a>
+                <a href="https://www.linkedin.com/in/federicheddu">
+                  <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
+                </a>
+              </div>
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Social</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://twitter.com/federicheddu">
+                  <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
+                </a>
+                <a href="https://www.instagram.com/federicheddu">
+                  <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
+                </a>
+                <a href="https://www.reddit.com/user/federicheddu">
+                  <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
+                </a>
+              </div>
+              <div class="linktree-cluster">
+                <div class="linktree-cluster-title">Other</div>
+                <div class="linktree-cluster-line"></div>
+                <a href="https://open.spotify.com/user/federicheddu98">
+                  <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
+                </a>
+                <a href="https://steamcommunity.com/id/federicheddu">
+                  <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
+                </a>
+              </div>
+            </div>
 
     </main>
     <footer>
