--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <p>I am a <strong>PhD Student</strong> in <strong>Computer Science</strong> at the <strong>University of Cagliari</strong>, I am part of the research group <strong><a href="https://cg3hci.dmi.unica.it/">CG3HCI</a></strong>.</p>
             <p>During my studies I developed an interest in <strong>Computer Graphics</strong> (main focus of my PhD and both my thesis) and <strong>Human-Computer Interaction</strong>. My research is now focusing on <strong>Volume Mapping</strong> algorithms and techniques.</p>
             <p>In my time at the university I also had the opportunity to explore other fields such as <strong>Computer Vision</strong> and <strong>Deep Learning</strong>, although they are not my main focus.</p>
-            <p style="margin-top: 0.5em;"><strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a> - <strong>Address:</strong> Palazzo delle Scienze, via Ospedale 72, Cagliari, Italy</p>
-            <p style="margin-top: 0.1em;"><strong>Profile:</strong> <a href="https://cg3hci.dmi.unica.it/lab/author/federico-meloni/">CG3HCI Lab.</a> ~ <a href="https://web.unica.it/unica/en/ateneo_s08_ss03_sss03_01.page?contentId=SHP501909">University of Cagliari</a> ~ <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf">CV.pdf</a></p>
+            <p style="margin-top: 0.5em;"><strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a></p>
+            <p style="margin-top: 0.1em;"><strong>Profile:</strong> <a href="https://cg3hci.dmi.unica.it/lab/author/federico-meloni/">CG3HCI Lab.</a> ~ <a href="https://web.unica.it/unica/en/ateneo_s08_ss03_sss03_01.page?contentId=SHP501909">University</a> ~ <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf">CV.pdf</a></p>
+            <p style="margin-top: 0.1em;"><strong>Address:</strong> Palazzo delle Scienze, via Ospedale 72, Cagliari, Italy</p>
         </section>
         <section class="publications">
             <h2>Publications</h2>
