--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         display: flex;
         flex-wrap: wrap;
         gap: 24px;
-        align-items: flex-start;
-        justify-content: flex-start;
+        align-items: center;
+        justify-content: center;
         margin-top: 12px;
         margin-bottom: 12px;
       }
