--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>In my time at the university I also had the opportunity to explore other fields such as <strong>Computer Vision</strong> and <strong>Deep Learning</strong>, although they are not my main focus.</p>
             <p style="margin-top: 0.5em;"><strong>Email:</strong> <a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a></p>
             <p style="margin-top: 0.1em;"><strong>Profile:</strong> <a href="https://cg3hci.dmi.unica.it/lab/author/federico-meloni/">CG3HCI Lab.</a> ~ <a href="https://web.unica.it/unica/en/ateneo_s08_ss03_sss03_01.page?contentId=SHP501909">University</a> ~ <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf">CV.pdf</a></p>
-            <p style="margin-top: 0.1em;"><strong>Address:</strong> Palazzo delle Scienze, via Ospedale 72, Cagliari, Italy</p>
+            <p style="margin-top: 0.1em;"><strong>Office:</strong> Palazzo delle Scienze, via Ospedale 72, Cagliari, Italy</p>
         </section>
         <section class="publications">
             <h2>Publications</h2>
