Add supervision section and VisualMap teaser
Introduced a new 'Supervision' section in index.html listing supervised thesis projects, including 'VisualMap' with a teaser image. Also highlighted F. Meloni's name in publication lists and updated CinoLib's award information.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
-                          <div class="university"><i>F. Meloni, G. Cherchi, R. Scateni, M. Livesu</i></div>
+                          <div class="university"><i><strong>F. Meloni</strong>, G. Cherchi, R. Scateni, M. Livesu</i></div>
                           <div class="university">Presented at <a href="https://www.stag-conference.org/2024/">STAG 2024</a></div>
                           <div class="university">[<a href="https://diglib.eg.org/server/api/core/bitstreams/b17146fe-0b6e-45ab-aee4-0e557161e9cd/content">Paper</a>] [<a href="https://github.com/VOLMAP/volmap.github.io/tree/main/rationals_io">Code 1</a> / <a href="https://github.com/VOLMAP/volmap.github.io/tree/main/volume_mapping_check">Code 2</a>] [<a href="https://volmap.github.io/">Results</a>]</div>
                         </div>
@@ -94,7 +94,7 @@
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
-                          <div class="university"><i>F. Meloni, A. Perniciano, G. Cerniglia, V. Frau, L.D. Spano</i></div>
+                          <div class="university"><i><strong>F. Meloni</strong>, A. Perniciano, G. Cerniglia, V. Frau, L.D. Spano</i></div>
                           <div class="university">Presented at <a href="https://cg3hci.dmi.unica.it/iseud2023/">IS-EUD 2023</a></div>
                           <div class="university">[<a href="https://iris.unica.it/retrieve/4d8f582f-0e3a-4356-9a48-9c9202381a67/short-s0-02_compressed.pdf">Paper</a>]</div>
                         </div>
@@ -119,7 +119,9 @@
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
-                          <div class="university"><i>A generic programming header only C++ library for processing polygonal and polyhedral meshes</i></div>
+                          <div class="university"><i>A generic programming header only C++ library for processing polygonal and polyhedral meshes.
+                            <br>CinoLib received the Symposium on Geometry Processing Software Award in 2024.
+                          </i></div>
                           <div class="university">[<a href="https://github.com/mlivesu/cinolib">GitHub</a>]</div>
                         </div>
                       </div>
@@ -156,6 +158,31 @@
                             <i>An additional recognition for authors who are willing to go one step further, and in addition to publishing the paper, provide a complete open-source implementation.</i>
                           </div>
                           <div class="university">[<a href="https://www.replicabilitystamp.org">Website</a>]</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="supervision">
+            <h2>Supervision</h2>
+            <p>Here are the thesis projects I supervised:</p>
+            <br>
+            <ul>
+                <li>
+                  <strong class="publication-title-mobile">VisualMap: un tool web per la visualizzazione di mappe biettive tra mesh di tetraedri</strong>
+                  <div class="publication-row">
+                    <img class="publication-thumb" src="media/teasers/visualmap.png" alt="VisualMap Teaser">
+                    <div class="publication-main">
+                      <strong class="publication-title">VisualMap: un tool web per la visualizzazione di mappe biettive tra mesh di tetraedri</strong>
+                      <div class="publication-cite">
+                        <div class="publication-cite-line"></div>
+                        <div class="publication-cite-content">
+                          <div class="university">Students: <i>A. Giacalone, D. Mulas</i></div>
+                          <div class="university">Supervisors: <i>G. Cherchi, M. Livesu, <strong>F. Meloni</strong></i></div>
+                          <div class="university">[Thesis]</div>
                         </div>
                       </div>
                     </div>
