Add VOLMAP Viewer publication and update teaser image
Added a new publication entry for VOLMAP Viewer to the publications list in index.html, including author details, conference info, and relevant links. Updated the visualmap.png teaser image to reflect the new publication. Also added a GitHub link to the VOLMAP benchmark entry.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
             <br>
             <ul>
                 <li>
+                  <strong class="publication-title-mobile">VOLMAP Viewer: a Web-Based Interactive Visual Tool to Explore Volume Maps</strong>
+                  <div class="publication-row">
+                    <img class="publication-thumb" src="media/teasers/visualmap.png" alt="VOLMAP Viewer Teaser">
+                    <div class="publication-main">
+                      <strong class="publication-title">VOLMAP Viewer: a Web-Based Interactive Visual Tool to Explore Volume Maps</strong>
+                      <div class="publication-cite">
+                        <div class="publication-cite-line"></div>
+                        <div class="publication-cite-content">
+                          <div class="university"><i>A. Giacalone, D. Mulas, <strong>F. Meloni</strong>, G. Cherchi, M. Livesu</i></div>
+                          <div class="university">Presented at <a href="https://www.stag-conference.org/2025/">STAG 2025</a></div>
+                          <div class="university">[<a href="https://www.stag-conference.org/2025/">Paper</a>] [<a href="https://volmap.github.io/viewer">Viewer</a>] [<a href="https://github.com/VOLMAP/viewer">GitHub</a>]</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
                   <strong class="publication-title-mobile">To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong>
                   <div class="publication-row">
                     <img class="publication-thumb" src="media/teasers/volume_mapping_comp.png" alt="Volume Mapping Paper Teaser">
@@ -139,7 +156,7 @@
                         <div class="publication-cite-content">
                           <div class="university"><i>A large-scale benchmark aimed to support ongoing research in volume mapping algorithms.
                             <br>VOLMAP also comprises tools to process this data and analyze the resulting maps.</i></div>
-                          <div class="university">[<a href="https://volmap.github.io">Website</a>]</div>
+                          <div class="university">[<a href="https://volmap.github.io">Website</a>] [<a href="https://github.com/VOLMAP">GitHub</a>]</div>
                         </div>
                       </div>
                     </div>
